@@ -2,7 +2,7 @@ Package: GetoptLong
 Type: Package
 Title: Parsing Command-Line Arguments and Variable Interpolation
 Version: 0.1.6
-Date: 2016-11-18
+Date: 2017-3-5
 Author: Zuguang Gu
 Maintainer: Zuguang Gu <z.gu@dkfz.de>
 Depends: R (>= 3.2.0)
@@ -15,6 +15,6 @@ Description: This is yet another command-line argument parser which wraps the
 URL: https://github.com/jokergoo/GetoptLong
 SystemRequirements: Perl, Getopt::Long
 License: GPL (>= 2)
-Packaged: 2016-11-18 00:00:00 UTC; Administrator
+Packaged: 2017-3-5 00:00:00 UTC; Administrator
 Repository: CRAN
-Date/Publication: 2016-11-18 00:00:00
+Date/Publication: 2017-3-5 00:00:00
